--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -10,7 +10,7 @@
         android:id="@+id/menu_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/chess_delux"
+        android:text="@string/app_name"
         android:textSize="35sp"
         android:textColor="@color/cheese"
         android:shadowColor="@color/black"
@@ -23,14 +23,49 @@
 
     <include layout="@layout/chessboard_layout"/>
 
-    <Button
-        android:id="@+id/back"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/back"
-        android:layout_margin="10dp"
-        android:background="@color/cheese"
-        android:layout_gravity="start"/>
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal">
 
+        <Button
+            android:id="@+id/back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
+            android:background="@color/cheese"
+            android:text="@string/back" />
+
+        <Button
+            android:id="@+id/game_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
+            android:background="@color/green"
+            android:clickable="false"
+            android:visibility="invisible"/>
+
+
+        <Button
+            android:id="@+id/restart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
+            android:background="@color/cheese"
+            android:text="@string/restart" />
+
+
+    </LinearLayout>
 
 </LinearLayout>
