--- a/app/src/main/res/layout/menu_layout.xml
+++ b/app/src/main/res/layout/menu_layout.xml
@@ -11,7 +11,7 @@
         android:id="@+id/menu_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/chess_delux"
+        android:text="@string/app_name"
         android:textSize="40sp"
         android:textColor="@color/cheese"
         android:shadowColor="@color/black"
