--- a/app/src/main/res/layout/tutorial_layout.xml
+++ b/app/src/main/res/layout/tutorial_layout.xml
@@ -12,7 +12,8 @@
         android:id="@+id/menu_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="30dp"
+        android:layout_marginTop="30dp"
         android:rotation="-10"
         android:shadowColor="@color/black"
         android:shadowDx="-2"
@@ -122,11 +123,12 @@
                 android:text="@string/cardinal_tutorial" />
 
             <Button
+                android:id="@+id/paladin_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:background="@color/cheese"
-                android:text="King Tutorial" />
+                android:text="@string/paladin_tutorial" />
 
             <Button
                 android:layout_width="match_parent"
