s-a incercat sa se adauge rau si capricorn. s-au adaugat probleme

--- a/app/src/main/res/layout/tutorial_layout.xml
+++ b/app/src/main/res/layout/tutorial_layout.xml
@@ -131,18 +131,20 @@
                 android:text="@string/paladin_tutorial" />
 
             <Button
+                android:id="@+id/river_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:background="@color/cheese"
-                android:text="King Tutorial" />
+                android:text="@string/river_tutorial" />
 
             <Button
+                android:id="@+id/capricorn_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:background="@color/cheese"
-                android:text="King Tutorial" />
+                android:text="@string/capricorn_queen_tutorial" />
 
             <Button
                 android:layout_width="match_parent"
