--- a/app/src/main/res/layout/tutorial_layout.xml
+++ b/app/src/main/res/layout/tutorial_layout.xml
@@ -147,11 +147,12 @@
                 android:text="@string/capricorn_queen_tutorial" />
 
             <Button
+                android:id="@+id/aquarius_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:background="@color/cheese"
-                android:text="King Tutorial" />
+                android:text="@string/aquarius_queen_tutorial" />
 
             <Button
                 android:layout_width="match_parent"
